--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <!-- Header -->
-    <header>
+    <header class="header">
         <!-- Logo -->
-
+        <div class="logo">
+            <img src="./img/logo.png" alt="logo TodoList">
+        </div>
     </header>
     <!-- /Header -->
 
@@ -21,6 +23,7 @@
         <!-- input-button  -->
         <div class="input">
             <input type="text" name="todocheck" placeholder="e.s: Fare la spesa.." id="">
+            <input type="button" value="Add Task">
         </div>
         <!-- /input-button  -->
 
