add: container list

--- a/index.html
+++ b/index.html
@@ -21,15 +21,41 @@
     <!-- Container -->
     <div class="container">
         <!-- input-button  -->
-        <div class="input">
+        <div class="bt">
             <input type="text" name="todocheck" placeholder="e.s: Fare la spesa.." id="">
             <input type="button" value="Add Task">
         </div>
         <!-- /input-button  -->
+        
 
         <!-- Lista annidata  -->
-        <div class="todo">
-
+        <div class="container-list">
+            <ol>
+                <li>
+                    <h2>TASK PRECEDENTI</h2>
+                    <ul>
+                        <li class="bcwhite">Quarterly Newsletter <span>Editorial</span></li>
+                    </ul>
+                </li>
+                <li>
+                    <h2>OGGI</h2>
+                    <ul>
+                        <li class="bcwhite">Recruiting blog post <span>Editoral</span></li>
+                        <li class="bcwhite">Mobile app luaunch <span>Q1 Goals</span></li>
+                        <li class="bcwhite">Interwiew John H.<span>Recruiting</span></li>
+                        <li class="bcwhite">Summit update to mobile storefrons<span>Mobile</span></li>
+                    </ul>
+                </li>
+                <li>
+                    <h2>PROSSIMI GIORNI</h2>
+                    <ul>
+                        <li class="bcwhite">Schedule meeting with Alex</li>
+                        <li class="bcwhite">Homepage refresh <span>Website</span></li>
+                        <li class="bcwhite">Onboard new Sales team members<span>Sales</span></li>
+                        <li class="bcwhite">Rewiew editorial calendar<span>Editorial</span></li>
+                    </ul>
+                </li>
+            </ol>
         </div>
         <!-- /Lista annidata -->
 
