--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input type="button" value="Add Task">
         </div>
         <!-- /input-button  -->
-        
+
 
         <!-- Lista annidata  -->
         <div class="container-list">
@@ -34,25 +34,26 @@
                 <li>
                     <h2>TASK PRECEDENTI</h2>
                     <ul>
-                        <li class="bcwhite">Quarterly Newsletter <span>Editorial</span></li>
+                        <li class="bcwhite">Quarterly Newsletter <span class="label-blue">Editorial</span></li>
                     </ul>
                 </li>
                 <li>
                     <h2>OGGI</h2>
                     <ul>
-                        <li class="bcwhite">Recruiting blog post <span>Editoral</span></li>
-                        <li class="bcwhite">Mobile app luaunch <span>Q1 Goals</span></li>
-                        <li class="bcwhite">Interwiew John H.<span>Recruiting</span></li>
-                        <li class="bcwhite">Summit update to mobile storefrons<span>Mobile</span></li>
+                        <li class="bcwhite">Recruiting blog post <span class="label-blue">Editoral</span></li>
+                        <li class="bcwhite">Mobile app luaunch <span class="label-violet">Q1 Goals</span></li>
+                        <li class="bcwhite">Interwiew John H. <span class="label-green1">Recruiting</span></li>
+                        <li class="bcwhite">Summit update to mobile storefrons <span class="label-orange">Mobile</span>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <h2>PROSSIMI GIORNI</h2>
                     <ul>
-                        <li class="bcwhite">Schedule meeting with Alex</li>
-                        <li class="bcwhite">Homepage refresh <span>Website</span></li>
-                        <li class="bcwhite">Onboard new Sales team members<span>Sales</span></li>
-                        <li class="bcwhite">Rewiew editorial calendar<span>Editorial</span></li>
+                        <li class="bcwhite">Schedule meeting with Alex </li>
+                        <li class="bcwhite">Homepage refresh <span class="label-fucsia">Website</span></li>
+                        <li class="bcwhite">Onboard new Sales team members <span class="label-green2">Sales</span></li>
+                        <li class="bcwhite">Rewiew editorial calendar<span class="label-blue">Editorial</span></li>
                     </ul>
                 </li>
             </ol>
