--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- input-button  -->
         <div class="bt">
             <input type="text" name="todocheck" placeholder="e.s: Fare la spesa.." id="">
-            <input type="button" value="Add Task">
+                <input class="button" type="button" value="Add Task">
         </div>
         <!-- /input-button  -->
 
@@ -32,28 +32,29 @@
         <div class="container-list">
             <ol>
                 <li>
-                    <h2>TASK PRECEDENTI</h2>
+                    <h2> &#11166; TASK PRECEDENTI</h2>
                     <ul>
-                        <li class="bcwhite">Quarterly Newsletter <span class="label-blue">Editorial</span></li>
+                        <li class="bcwhite lthr"> &check; Quarterly Newsletter <span class="label-blue bdr">Editorial</span></li>
                     </ul>
                 </li>
                 <li>
-                    <h2>OGGI</h2>
+                    <h2> &#11166; OGGI</h2>
                     <ul>
-                        <li class="bcwhite">Recruiting blog post <span class="label-blue">Editoral</span></li>
-                        <li class="bcwhite">Mobile app luaunch <span class="label-violet">Q1 Goals</span></li>
-                        <li class="bcwhite">Interwiew John H. <span class="label-green1">Recruiting</span></li>
-                        <li class="bcwhite">Summit update to mobile storefrons <span class="label-orange">Mobile</span>
+                        <li class="bcwhite lthr"> &check; Recruiting blog post <span class="label-blue bdr">Editoral</span></li>
+                        <li class="bcwhite lthr"> &check; Mobile app luaunch <span class="label-violet bdr">Q1 Goals</span></li>
+                        <li class="bcwhite">Interwiew John H. <span class="label-green1 bdr">Recruiting</span></li>
+                        <li class="bcwhite lthr"> &check; Summit update to mobile storefrons <span class="label-orange bdr">Mobile</span>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <h2>PROSSIMI GIORNI</h2>
+                    <h2> &#11166; PROSSIMI GIORNI</h2>
                     <ul>
                         <li class="bcwhite">Schedule meeting with Alex </li>
-                        <li class="bcwhite">Homepage refresh <span class="label-fucsia">Website</span></li>
-                        <li class="bcwhite">Onboard new Sales team members <span class="label-green2">Sales</span></li>
-                        <li class="bcwhite">Rewiew editorial calendar<span class="label-blue">Editorial</span></li>
+                        <li class="bcwhite lthr"> &check; Homepage refresh <span class="label-fucsia bdr">Website</span></li>
+                        <li class="bcwhite lthr"> &check; Onboard new Sales team members <span class="label-green2 bdr">Sales</span>
+                        </li>
+                        <li class="bcwhite lthr"> &check; Rewiew editorial calendar <span class="label-blue bdr">Editorial</span></li>
                     </ul>
                 </li>
             </ol>
