add: check e cross

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="container">
         <!-- input-button  -->
         <div class="bt">
-            <input type="text" name="todocheck" placeholder="e.s: Fare la spesa.." id="">
-                <input class="button" type="button" value="Add Task">
+            <input class="search" name="todocheck" placeholder="e.s: Fare la spesa..">
+            <input class="buttontask" type="button" value="Add Task">
         </div>
         <!-- /input-button  -->
 
@@ -34,27 +34,60 @@
                 <li>
                     <h2> &#11166; TASK PRECEDENTI</h2>
                     <ul>
-                        <li class="bcwhite lthr"> &check; Quarterly Newsletter <span class="label-blue bdr">Editorial</span></li>
+                        <li class="bcwhite">
+                            <span class="done">&#10004;</span>
+                            <span class="lthr">Quarterly Newsletter</span>
+                            <span class="label-blue bdr lthr">Editorial</span>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <h2> &#11166; OGGI</h2>
                     <ul>
-                        <li class="bcwhite lthr"> &check; Recruiting blog post <span class="label-blue bdr">Editoral</span></li>
-                        <li class="bcwhite lthr"> &check; Mobile app luaunch <span class="label-violet bdr">Q1 Goals</span></li>
-                        <li class="bcwhite">Interwiew John H. <span class="label-green1 bdr">Recruiting</span></li>
-                        <li class="bcwhite lthr"> &check; Summit update to mobile storefrons <span class="label-orange bdr">Mobile</span>
+                        <li class="bcwhite">
+                            <span class="done">&#10004;</span>
+                            <span class="lthr"> Recruiting blog post</span>
+                            <span class="label-blue bdr lthr">Editoral</span>
+                        </li>
+                        <li class="bcwhite">
+                            <span class="done">&#10004;</span>
+                            <span class="lthr">Mobile app luaunch </span>
+                            <span class="label-violet bdr lthr">Q1 Goals</span>
+                        </li>
+                        <li class="bcwhite">
+                            <span class="undone">&#10008;</span>
+                            <span>Interwiew John H. </span>
+                            <span class="label-green1 bdr">Recruiting</span>
+                        </li>
+                        <li class="bcwhite ">
+                            <span class="done">&#10004;</span>
+                            <span class="lthr">Summit update to mobile storefrons</span>
+                            <span class="label-orange bdr lthr">Mobile</span>
                         </li>
                     </ul>
                 </li>
                 <li>
                     <h2> &#11166; PROSSIMI GIORNI</h2>
                     <ul>
-                        <li class="bcwhite">Schedule meeting with Alex </li>
-                        <li class="bcwhite lthr"> &check; Homepage refresh <span class="label-fucsia bdr">Website</span></li>
-                        <li class="bcwhite lthr"> &check; Onboard new Sales team members <span class="label-green2 bdr">Sales</span>
+                        <li class="bcwhite">
+                            <span class="undone">&#10008;</span>
+                            <span>Schedule meeting with Alex</span>
                         </li>
-                        <li class="bcwhite lthr"> &check; Rewiew editorial calendar <span class="label-blue bdr">Editorial</span></li>
+                        <li class="bcwhite">
+                            <span class="done">&#10004;</span>
+                            <span class="lthr"> Homepage refresh</span>
+                            <span class="label-fucsia bdr lthr">Website</span>
+                        </li>
+                        <li class="bcwhite">
+                            <span class="done">&#10004;</span>
+                            <span class="lthr">Onboard new Sales team members</span>
+                            <span class="label-green2 bdr lthr">Sales</span>
+                        </li>
+                        <li class="bcwhite">
+                            <span class="done">&#10004;</span>
+                            <span class="lthr"> Rewiew editorial calendar</span>
+                            <span class="label-blue bdr lthr">Editorial</span>
+                        </li>
                     </ul>
                 </li>
             </ol>
